<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MentorDetailActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Mentor Name"
        android:textSize="@dimen/detail_label_size"
        app:layout_constraintBottom_toBottomOf="@+id/mentor_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mentor_detail_name" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Mentor Email"
        android:textSize="@dimen/detail_label_size"
        app:layout_constraintBottom_toBottomOf="@+id/mentor_detail_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mentor_detail_email" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Mentor Phone"
        android:textSize="@dimen/detail_label_size"
        app:layout_constraintBottom_toBottomOf="@+id/mentor_detail_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mentor_detail_phone" />

    <EditText
        android:id="@+id/mentor_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@android:color/transparent"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mentor_detail_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email_address"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@android:color/transparent"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/mentor_detail_name" />

    <EditText
        android:id="@+id/mentor_detail_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_phone_number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/detail_text_size"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/mentor_detail_email" />
</androidx.constraintlayout.widget.ConstraintLayout>